Solved a CSS overflow bug

--- a/client/main.less
+++ b/client/main.less
@@ -2,7 +2,7 @@ body{
     font-family: 'Lato', Calibri, Arial, sans-serif;
     min-width: 100%;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     box-sizing: border-box;
 
     /*.transition(all 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000));*/
